@@ -12,6 +12,8 @@ o FIX: bug for moniker check when `dictionary = "general"` in `textcleaner` (see
 
 o UPDATE: internal adjustment for parsing multiple words with the general dictionary (speeds up process)
 
+o ADD: preprocessing data from SemNA tutorial (`open.preprocess`)
+
 
 Changes in version 1.3.0
 
